Closed
Bug 1875306
Opened 2 years ago
Closed 2 years ago
The underflow and overflow errors do not localize numbers
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
124 Branch
| Tracking | Status | |
|---|---|---|
| firefox124 | --- | fixed |
People
(Reporter: pierov, Assigned: pierov)
Details
Attachments
(1 file)
The underflow and overflow validation messages do not localize numbers, contrarily to the range errors, which instead localizes it.
I think the reason is that the range goes through ConvertNumberToString, whereas the methods creating the other messages call Decimal::toString.
Steps to reproduce:
- Set a language that localizes numbers (e.g., ar, fa)
- Go to https://arkenfox.github.io/TZP/tests/applang.html
- Click on run
- Check
NumberRangeOverflow,NumberRangeUnderflowandStepMismatch
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Severity: -- → S3
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd7ab7cab97d
Localize numbers in the underflow and overflow error messages. r=emilio
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox124:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•