Bug 1875306 - Localize numbers in the underflow and overflow error messages. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D198965